<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/system_settings_key"
    android:summary="@string/system_settings_summary"
    android:title="@string/system_settings_title">

    <Preference
        android:key="@string/date_time_key"
        android:summary="@string/date_time_settings_summary"
        android:title="@string/pref_date_time">
        <!--<intent android:action="android.settings.DATE_SETTINGS" />-->
    </Preference>

    <Preference
        android:key="@string/accessibility_key"
        android:title="@string/pref_accessibility">
        <!--<intent android:action="android.settings.ACCESSIBILITY_SETTINGS" />-->
    </Preference>

    <Preference
        android:key="@string/print_key"
        android:title="@string/pref_printing">
        <!--<intent android:action="android.settings.ACTION_PRINT_SETTINGS" />-->
    </Preference>

    <!--<Preference android:title="@string/pref_developer_option">-->
    <!--<intent android:action="android.settings.APPLICATION_DEVELOPMENT_SETTINGS" />-->
    <!--</Preference>-->

    <Preference
        android:key="@string/about_key"
        android:title="@string/pref_about_phone">
        <!--<intent android:action="android.settings.DEVICE_INFO_SETTINGS" />-->
    </Preference>

</PreferenceScreen>