<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:hint="@string/label_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/label_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_backup"
        android:orderInCategory="101"
        android:title="@string/label_backup"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:orderInCategory="102"
        android:title="@string/label_restore"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_evernote"
        android:orderInCategory="103"
        android:title="Evernote sync"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />

</menu>
